Sat Sep 29 15:48:56 2001  George Lebl <jirka@5z.com>

	* gnome-about.c: destroy the dialog when OK is pressed, just like the
	  1.0 behaviour

	* gnome-icon-sel.c: Fix the FIXME in the load, by using our own main
	  loop.  Also fixes race issues that could happen when you mess with
	  the icons while the load is in progress.

	* gnome-icon-entry.c: Fix the accepting of .desktop files (it
	  snarfs the icon from those).  So it's now at 1.0 level
	  functionality :)

Fri Sep 28 15:54:23 2001  George Lebl <jirka@5z.com>

	* gnome-app.c: set the icon if the property of GnomeProgram is set.
	  the string can be a ';' separated list of files, so that multiple
	  icons can be optionally set.

	* gnome-about.c, gnome-app.c, gnome-appbar.c, gnome-client.c
	  gnome-color-picker.c, gnome-file-entry.c, gnome-href.c,
	  gnome-icon-entry.c, gnome-icon-list.c, gnome-pixmap-entry.c,
	  gnome-scores.c, gnome-entry.c, gnome-druid-page-edge.c,
	  gnome-druid-page-standard.c, gnome-druid-page.c,
	  gnome-font-picker.c, gnome-icon-sel.c, gnome-messagebox.c,
	  gnome-propertybox.c:  Make finalize and destroy behave
	  as described in gtk docs.  Add finalize where needed,
	  and add some more use of the gnome-macros.h.  Also remove
	  unused finalize and destroy overrides as they just add
	  cruft code.

	* gnome-about.c: Actually free stuff on finalize

	* gnome-window-icon.c: add some preconditions

	* gnome-entry.c: correct gconf usage 

2001-09-26  Michael Meeks  <michael@ximian.com>

	* libgnomeui-2.0.pc.in: add libbonoboui-2.0 for gnome
	dock stuff.

2001-09-23  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* .cvsignore: Ignore gnome_segv2 binary.

2001-09-19  Ariel Rios  <ariel@gnu.org>

        * gnome-entry.c (check_for_duplicates):  Cast the
        first argument in strcmp since PPC complains about
        it.

2001-09-18  Havoc Pennington  <hp@redhat.com>

	* Makefile.am (gnome_segv2_SOURCES): rename gnome_segv

	* gnome_segv.c (main): rename gnome_segv to gnome_segv2
